--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,3 +93,21 @@
 .tech-icon:hover div {
   animation: float 1.5s ease-in-out infinite;
 }
+
+
+/* about me css */
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-up {
+  animation: fadeInUp 1s ease-out forwards;
+}
